--- a/blog/_posts/2022-09-23-cmd-66.mdx
+++ b/blog/_posts/2022-09-23-cmd-66.mdx
@@ -147,9 +147,7 @@ https://www.youtube.com/watch?v=UQds7MpoGHQ
 
 ## Der Plan - Hey Baby Hop
 
-### Experimental / Synth Pop / Kautrock - Compilation :  Eins Und Zwei Und Drei
-Und Vier (Deutsche Experimentelle Pop​-​Musik 1980​-​86)
-(2022)
+### Experimental / Synth Pop / Kautrock - Compilation :  Eins Und Zwei Und Drei Und Vier (Deutsche Experimentelle Pop-Musik 1980-86) (2022)
 
 Que des coups de coeur cette semaine mais petit bonus pour le grain de folie de
 "Hey Baby Hop" de Der Plan, découvert par hasard en lisant [un article sur le
