--- a/blog/_posts/2022-11-25-cmd-75.mdx
+++ b/blog/_posts/2022-11-25-cmd-75.mdx
@@ -32,7 +32,7 @@ cette semaine. `cmd` en avance sur FIP cela se fête un peu.
 
 Avec ce morceau-ci on est dans ce que le groupe fait de mieux, un mélange de ce
 très bon Jazz qui laisse place à l'improvisation avec des détails plus
-électroniques qui donne à l'ensemble une ambiance quelque peu __spatiale__.
+électroniques qui donne à l'ensemble une ambiance quelque peu _spatiale_.
 
 https://www.youtube.com/watch?app=desktop&utm_source=pocket_saves&v=T5epgWNEdzQ
 
