--- a/blog/_posts/2022-11-25-cmd-75.mdx
+++ b/blog/_posts/2022-11-25-cmd-75.mdx
@@ -94,7 +94,7 @@ juste 12 épisodes de 30min).
 
 Or, dans la BO j'ai déniché un "Only You" de Yazoo, cover d'un autre, venu du
 monde parallèle où évoluaient les The Flying Pickets. Ça nous amène ici à
-écouter le beau jeu __a capella__ que voici.
+écouter le beau jeu _a capella_ que voici.
 
 https://www.youtube.com/watch?v=HFdZ99ZmIUs
 
