--- a/blog/_posts/2022-11-25-cmd-75.mdx
+++ b/blog/_posts/2022-11-25-cmd-75.mdx
@@ -105,7 +105,7 @@ https://www.youtube.com/watch?v=HFdZ99ZmIUs
 ### Ambient / Experimental - Album : rEAGENZ (1994)
 
 Nouvelle sortie chez les merveilleu•ses Mental Groove Records / Musique Pour La
-Danse avec ce remastering de rEAGENZ et leur album éponymes. Que des choses
+Danse avec ce remastering de rEAGENZ et leur album éponyme. Que des choses
 incroyables à faire passer à travers les tympans, donc ce "ö", Ambiant et
 pourtant rythmé, planant et pourtant légèrement angoissant. Presque 7 minutes
 d'une vraie narration sur un language minimaliste. On aime beaucoup. L'album est
