--- a/blog/_posts/2022-12-02-cmd-76.mdx
+++ b/blog/_posts/2022-12-02-cmd-76.mdx
@@ -12,10 +12,10 @@ export const metadata = Metadata.createCmd({
   }
 })
 
-Ouverture d'un `cmd` parfum manque de sommeil. Coup de bol, juste assez de
-nouveaux morceaux dépilés cette semaine, mais pour tout vous dire, nous ne
-sommes pas passé•es loin de la catastrophe. C'est comme si la source c'était
-tarie un court instant.
+Ouverture d'un `cmd` parfum manque de sommeil et planètes mal alignées. Coup de
+bol, juste assez de nouveaux morceaux dépilés cette semaine, mais pour tout vous
+dire, nous ne sommes pas passé•es loin de la catastrophe. C'est comme si la
+source c'était tarie un court instant.
 
 Le programme du jour assure néanmoins : Rock Indie ou pas, Experimental car
 voilà `cmd` quoi, Electro, Pop, Italo Disco, Post Punk car ça fait du bien, Jazz
