--- a/blog/_posts/2022-12-16-cmd-78.mdx
+++ b/blog/_posts/2022-12-16-cmd-78.mdx
@@ -7,8 +7,8 @@ export const metadata = Metadata.createCmd({
   title: 'cmd #78',
   image: {
     src: '/images/cmd-78.png',
-    alt: "petite statuette représentant un animal",
-    caption: "au Louvre",
+    alt: "tag moins de taf plus de kiff sur un mur",
+    caption: "ffs",
   }
 })
 
