--- a/blog/_posts/2022-12-23-cmd-79.mdx
+++ b/blog/_posts/2022-12-23-cmd-79.mdx
@@ -86,8 +86,8 @@ Re-voici le grand défenseur des gémeaux (merci mec), aka Steve Lacy, qui prend
 maintenant ses quartiers sur FIP. On y passait le sombre "Static", track 1 du
 dernier album du bonhomme qu'on aime beaucoup. Vous y trouverez d'autres
 morceaux dans cette même veine Indie Pop / R&B / mélancolie qu'on aime bien par
-ici comme Bad Habits à la structure aux petits oignons, Mercury et sa
-bossanova, Amber et ses percus délicates. Voilà.
+ici comme "Bad Habits" à la structure aux petits oignons, "Mercury" et sa
+bossanova, "Amber" et ses percus délicates. Voilà.
 
 https://www.youtube.com/watch?v=jeeA2MyGXBE
 
@@ -195,7 +195,7 @@ retrace le parcours surprenant de l'artiste.
 
 On s'arrêtera donc avec "I Think of You", balade langoureuse et son texte
 parfait comme, je crois, l'ensemble des morceaux de Rodriguez. Faites moi
-confiance, j'ai tout écouté.
+confiance, j'ai tout écouté des deux albums du monsieur.
 
 https://www.youtube.com/watch?v=cAjfKWQ8PP0
 
