--- a/blog/_posts/2022-12-23-cmd-79.mdx
+++ b/blog/_posts/2022-12-23-cmd-79.mdx
@@ -98,7 +98,7 @@ https://www.youtube.com/watch?v=jeeA2MyGXBE
 ### Ambient - Single : New Horizons (2022)
 
 Collaboration entre le pianiste et compositeur Michele Nobler et la productrice
-Applefish, et remixé par Broken Peak, voici un morceau Ambiant qui pourrait
+Applefish, et remixé par Broken Peak, voici un morceau Ambient qui pourrait
 sortir de la BO de films façon Interstellar. On le comprends à la pochette
 déjà, c'est un lent voyage dans l'espace. À écouter fort.
 
