--- a/blog/_posts/2022-12-23-cmd-79.mdx
+++ b/blog/_posts/2022-12-23-cmd-79.mdx
@@ -147,7 +147,7 @@ https://www.youtube.com/watch?v=IuVFMVX2eY0
 ### Indie Rock - Album : Vortex Numbers (2015)
 
 Que serait `cmd` sans présence de bons dogos de temps en temps ? Certainement
-sacrément fade, comme le reste de l'existence le serait alors.
+sacrément fade, comme le reste de l'existence alors.
 
 Heureusement, je nous ai trouvé cette semaine ce "A Dog Will Love You When
 Nobody Else Will", Indie Rock assez classique voir même un peu vintage au fond.
