--- a/blog/_posts/2023-01-12-cmd-82.mdx
+++ b/blog/_posts/2023-01-12-cmd-82.mdx
@@ -174,7 +174,7 @@ On se quitte avec un morceau qui envoie dans les pensées, pour ne rien changer.
 [Cet
 album](https://tigersushirecords.bandcamp.com/album/abcdefghijklmnopqrstuvwxyz)
 de Principles of geometry est une merveille, équilibrée parfaitement entre
-l'IDM, le Breakbeat et l'Ambient. Je vous le conseil entier.
+l'IDM, le Breakbeat et l'Ambient. Je vous le conseille entier.
 
 Bisous bisous
 
