--- a/blog/_posts/2023-02-10-cmd-86.mdx
+++ b/blog/_posts/2023-02-10-cmd-86.mdx
@@ -91,7 +91,7 @@ Il fallait que ça arrive car cela n'était qu'une affaire de semaines, au fond 
 
 Alors comme on aime ça, je nous ai trouvé une version Extended parce que oui ça secoue agréablement. Je vous conseille par ailleurs d'écouter ce morceau au réveil, histoire d'éviter tout endormissement intempestif.
 
-Merci tout plein, Enora - quelque chose me dit qu'on va te retrouver souvent par ici.
+Merci tout plein Enora - quelque chose me dit qu'on va te retrouver souvent par ici.
 
 https://www.youtube.com/watch?v=AbHTrmTg5Ow
 
