--- a/blog/_posts/2023-03-03-cmd-89.mdx
+++ b/blog/_posts/2023-03-03-cmd-89.mdx
@@ -15,7 +15,7 @@ Nouvelle semaine, épisode 89 et la centaine qui se rapproche à (trop) grands p
 
 Au programme: de la mélancolie. Étrange alignement de planètes qui amène à cette sélection qui collerait mieux à une fin de mois d'octobre qu'à un début de mois de mars ensoleillé. Mais que voulez-vous. Les règles sont les règles. Les morceaux mis de côtés cette semaine sont ceux-ci et ils sont très jolis.
 
-Indie Rock, R&B, Dee[ ]House, Breakbeat, Pop Rock. C'est tout bon.
+Indie Rock, R&B, Deep House, Breakbeat, Pop Rock. C'est tout bon.
 
 
 
