--- a/blog/_posts/2023-03-03-cmd-89.mdx
+++ b/blog/_posts/2023-03-03-cmd-89.mdx
@@ -35,7 +35,7 @@ https://www.youtube.com/watch?v=_dvo1EROUvk
 
 ### R&B - Single : Sexy Love (2006)
 
-Le cerveau fait des drôles de choses parfois, comme nous rappeler discrètement la mélodie de "So-Sic" de Ne-Yo et nous la faire fredonner discrètement. Le morceau date tout de même de 2006 et si la version original me plait moyennement, la version acoustique garde un charme qui fait toujours son effet.
+Le cerveau fait des drôles de choses parfois, comme nous rappeler discrètement la mélodie de "So Sick" de Ne-Yo et nous la faire fredonner discrètement. Le morceau date tout de même de 2006 et si la version original me plait moyennement, la version acoustique garde un charme qui fait toujours son effet.
 
 https://www.youtube.com/watch?app=desktop&utm_source=pocket_saves&v=Z4qqGEKPGUY
 
