--- a/blog/_posts/2023-03-07-cmd-90.mdx
+++ b/blog/_posts/2023-03-07-cmd-90.mdx
@@ -11,7 +11,7 @@ export const metadata = Metadata.createCmd({
 })
 
 
-`cmd` numéro 90. Que les semaines sont denses, les mois riches et les années comme de sacrés chemins qu'on parcourt tête baisser sans réaliser l'effort et le parcours, en zigzag peut-être, mais sympatoche néanmoins.
+`cmd` numéro 90. Que les semaines sont denses, les mois riches et les années comme de sacrés chemins qu'on parcourt tête baissée sans réaliser l'effort et le parcours, en zigzag peut-être, mais sympatoche néanmoins.
 
 Alors si il reste 10 épisodes avant d'atteindre la centaine qui mettra deux grosses claques du temps qui passe, prenons le temps de savourer les découvertes dénichées cette semaine sur les internets, les ondes radios et ami•es de partout qui m'envoient de plus en plus de musique à écouter et de choses à lire.
 
