--- a/blog/_posts/2023-03-17-cmd-91.mdx
+++ b/blog/_posts/2023-03-17-cmd-91.mdx
@@ -100,11 +100,11 @@ https://www.youtube.com/watch?v=Isu74_CYUEY
 
 ### Post Punk / Noise / Experimental - Album : Private Meaning First (2019)
 
-Vendredi soir dernier : grosse claque. Les Psychotic Monks à Stéréolux. Un concert probablement difficile d’accès, mais qui, pour qui sait se fondre dans le Noise, se sera révélé tout à la fois fabuleux et d’une violence rare.
+Vendredi soir dernier : grosse claque. Les Psychotic Monks à Stéréolux. Un concert probablement difficile d’accès mais qui, pour qui sait se fondre dans le Noise, se sera révélé tout à la fois fabuleux et d’une violence rare.
 
 On avait déjà croisé les quatre moines [par ici](https://cmd.wuips.com/post/2023-02-17-cmd-87) après la sortie de leur dernier album mais il me fallait en fait les voir en live pour saisir la puissance de leur musique.
 
-S'agit-il encore de musique ? On dirait de l'énergie pure qui court, sombre, courber l’espace temps et nous faire apercevoir, un court instant halluciné, un genre de lieu primaire, indompté qui serait à la fois enfoui en chacun et aussi partagé autour, lieu dont on aurait l'accès que lors de ces moments à la limite du temps comme celui qui s'est incarné alors vendredi soir en salle micro.
+S'agit-il encore de musique ? On dirait de l'énergie pure qui court, sombre, courber l’espace temps et nous faire apercevoir un court instant halluciné, un genre de lieu primaire indompté qui serait à la fois enfoui en chacun et aussi partagé autour - lieu dont on aurait l'accès que lors de ces moments à la limite du temps comme celui qui s'est incarné alors vendredi soir en salle Micro.
 
 Il m'a fait beaucoup d'effet ce concert. Je crois que je le digère encore, comme on se remet d'un évènement grave. Je ne peux que vous conseiller de regarder [la captation du groupe par CultureBox](https://www.france.tv/spectacles-et-culture/festivals/culturebox-festival/3409807-the-psychotic-monks-en-concert-au-culturebox-festival-2022.html) avec le son bien fort. Ça donne une idée du délire. En attendant, un morceau de 15 minutes.
 
