--- a/blog/_posts/2023-03-17-cmd-91.mdx
+++ b/blog/_posts/2023-03-17-cmd-91.mdx
@@ -118,7 +118,7 @@ https://viciouscircle.bandcamp.com/track/epilogue-every-sight
 
 On aime beaucoup FIP par ici et c'est donc tout naturellement qu'on passe voir les nouvelles [sessions Unik](https://www.youtube.com/playlist?list=PLmejO0kj_Hm_unwTAvtiDEFtVQMaEzSS_) quand il y en a. Elles révèlent parfois de sacrées surprises, de drôles de duo, des paires de voix qu'on attendait pas.
 
-Exemple ici avec Catastrophe et Katerine réunis autour de ce beaux texte qu'est Où va la nuit. C'est poétique et doux. Il nous faut bien ça pour nous remettre du Post Punk.
+Exemple ici avec Catastrophe et Katerine réunis autour de ce beau texte qu'est "Où va la nuit". C'est poétique et doux. Il nous faut bien ça pour nous remettre du Post Punk noisy.
 
 > Si tu savais où je vais la nuit <br/>
 > Tu resterais <br/>
