--- a/blog/_posts/2023-03-31-cmd-93.mdx
+++ b/blog/_posts/2023-03-31-cmd-93.mdx
@@ -64,7 +64,7 @@ https://www.youtube.com/watch?v=5uwjvQiMhis
 
 En parlant de détente, voilà de quoi approfondir l'activité avec un peu d'Ambient à la harpe et envoyé en reverb. Merci tout plein tout plein Enora :)
 
-Ce morceau comme si on voulait nous faire croire que le monde est doux, cotonneux, et que rien de moche n'existe, en particulier ni Darmanin, ni les coboys lanceurs de grenades en quad à travers champ. Le rêve est de courte durée mais c'est déjà de pris. Un pas après l'autre comme on dit.
+Ce morceau comme si on voulait nous faire croire que le monde est doux, cotonneux, et que rien de moche n'existe, en particulier ni Darmanin, ni les coboys lanceurs de grenades en quad à travers champ. Le rêve est de courte durée mais c'est déjà ça de pris. Un pas après l'autre comme on dit.
 
 https://www.youtube.com/watch?v=2vGmQMR2xAY
 
