--- a/blog/_posts/2023-04-07-cmd-94.mdx
+++ b/blog/_posts/2023-04-07-cmd-94.mdx
@@ -10,7 +10,7 @@ export const metadata = Metadata.createCmd({
   }
 })
 
-Avril déjà - i doit y avoir une erreur. Ce n'est pas physiquement possible de faire défiler un quart d'année aussi vite que ça, on a dû se planter quelque part.
+Avril déjà - il doit y avoir une erreur. Ce n'est pas physiquement possible de faire défiler un quart d'année aussi vite que ça, on a dû se planter quelque part.
 
 Au programme : le temps qui file mais surtout du Jazz, de la Pop, de la Chanson française, du Hip Hop, du Rock, de l'Ambiant, de la Synth Pop, de l'Experimental. Éclectisme.
 
