--- a/blog/_posts/2023-04-14-cmd-95.mdx
+++ b/blog/_posts/2023-04-14-cmd-95.mdx
@@ -71,7 +71,7 @@ https://dawuna.bandcamp.com/track/foreshadowing-2
 
 On continue l'exploration de la discographie de Ryuichi Sakamoto cette semaine, après l'annonce de la disparition du maître à la fin du mois dernier.
 
-Du récent async j'ai sélectionné cette drôle de pièce : "disintegration" porte bien son nom et si, de part son côté minimalisme avec la présence quasi unique d'un piano, on pourrait s'attendre à quelque chose de doux, il n'en est rien. Les quelques subtiles ajouts électro, ce beep très aigu qu'on retrouve ailleurs dans l'album, ces nappes, ont font un morceau plus angoissant que reposant.
+Du récent async j'ai sélectionné cette drôle de pièce : "disintegration" porte bien son nom et si, de part son côté minimalisme avec la présence quasi unique d'un piano, on pourrait s'attendre à quelque chose de doux, il n'en est rien. Les quelques subtiles ajouts électro, ce beep très aigu qu'on retrouve ailleurs dans l'album, ces nappes, en font un morceau plus angoissant que reposant.
 
 https://www.youtube.com/watch?v=hU94y276cuU
 
