--- a/blog/_posts/2023-04-14-cmd-95.mdx
+++ b/blog/_posts/2023-04-14-cmd-95.mdx
@@ -127,7 +127,7 @@ https://www.youtube.com/watch?v=LeRxhmdmuIk
 
 ### Synth Pop / New Wave - Album : Cherchez Le Garçon (1981)
 
-On terminera ambiance champêtre avec "Jardin chinois" de Taxi Girl (merci Enora Q!), une Synth Pop typiquement française, à la voix qui fait penser à Etienne Daho mais au texte qui se termine comme un film d'horreur.
+On terminera ambiance champêtre avec "Jardin chinois" de Taxi Girl (merci Enora !), une Synth Pop typiquement française, à la voix qui fait penser à Etienne Daho mais au texte qui se termine comme un film d'horreur.
 
 Ça n'a rien d'étonnant, c'est écrit par Daniel Darc qui s'est inspiré de polars et films sombres. Drôle de contraste donc entre l'histoire racontée et la musique, et cela ne fait qu'accentuer le propos.
 
