--- a/blog/_posts/2023-04-21-cmd-96.mdx
+++ b/blog/_posts/2023-04-21-cmd-96.mdx
@@ -124,7 +124,7 @@ https://www.youtube.com/watch?v=oh7Ptszx-V0
 
 ### Breakbeat / Drum & Bass (2022)
 
-[Mardi matin](https://www.prun.net/emission/8301-tumulte/dEw7-alone-in-studio-b) je me suis retrouvé pour la première fois seul pendant une heure derrière le micro de Prun. Belle expérience que celle de profiter d'une matinale complète pour déroulé une tracklist conçue pour l'occasion.
+[Mardi matin](https://www.prun.net/emission/8301-tumulte/dEw7-alone-in-studio-b) je me suis retrouvé pour la première fois seul pendant une heure derrière le micro de Prun. Belle expérience que celle de profiter d'une matinale complète pour dérouler une tracklist conçue pour l'occasion.
 
 On avait clôturé alors avec ce magnifique "mountain". Rebelotte ajourd'hui.
 
