--- a/posts/posts/2023-05-19-cmd-100.md
+++ b/posts/posts/2023-05-19-cmd-100.md
@@ -3,7 +3,7 @@ title: 'cmd #100'
 image:
     src: '/images/cmd-100.png'
     alt: "Un gâteau sur lequel est écrit cmd#100"
-    caption: "cmd a fêté comme il se doit"
+    caption: "cmd a fêté son anniversaire comme il se doit"
 ---
 
 Et voilà `cmd#100` qui tombe un vendredi de pont de l'ascension, autant vous dire que la priorité était donnée à la promenade au bord de mer. Pour autant rien n'arrête `cmd` et ce n'est certainement pas pour l'épisode 100 qu'on aurait dérogé à la règle d'un `cmd` par semaine, à sortir le vendredi, ah ça non.
