--- a/posts/posts/2023-06-23-cmd-105.md
+++ b/posts/posts/2023-06-23-cmd-105.md
@@ -3,7 +3,7 @@ title: 'cmd #105'
 image:
     src: '/images/cmd-105.png'
     alt: "Un écriteau Ne Pas Marcher"
-    caption: "ça va aider"
+    caption: "ça va pas aider"
 ---
 
 Semaine pleine balle mais ouf! on a trouvé le temps de mettre de côté juste le bon nombre de pépites pour faire un `cmd`. _On a encore eu de la chance._
