--- a/posts/posts/2023-06-23-cmd-105.md
+++ b/posts/posts/2023-06-23-cmd-105.md
@@ -16,7 +16,7 @@ Au programme : Ambient, Pop, Rock, Rap, Jazz, Techno. J'espère que cela vous pl
 
 ### Ambient / Electronica / Classical - Album : L​(​oo​)​ping (2023)
 
-On démarre avec une collaboration entre Rone et l'Orchestre national de Lyon pour un album entier de relectures des meilleurs oeuvres du musicien. 
+On démarre avec une collaboration entre Rone et l'Orchestre national de Lyon pour un album de relectures des meilleurs oeuvres du musicien. 
 
 L'album entier vaut le détour ; vous y reconnaîtrez certainement un air ou deux. En ce qui nous concerne ce matin voilà Tikkoun tout beau et tiré de la BO de la série du même nom. 
 
