--- a/posts/posts/2023-06-23-cmd-105.md
+++ b/posts/posts/2023-06-23-cmd-105.md
@@ -65,7 +65,7 @@ https://thesmile.bandcamp.com/track/bending-hectic
 
 ### Hip Hop / Rap - EP : GRHÜNT #77 (2023)
 
-Découverte impromptue du week : le rap extrèmement efficace de "Tranquillement" de Houdi. C'est l'avantage de partir passer un petit week-end entre ami•es, on écoute de tout et on revient avec 3 ou 4 sons à placer dans son `cmd`.
+Découverte impromptue du week : le rap extrèmement efficace de "Tranquillement" de Houdi. C'est l'avantage de partir passer un petit week-end entre ami•es, on écoute de tout et on revient avec 3 ou 4 sons à placer dans son `cmd`. Merci Axel !
 
 >77 de QI, le médecin m'a dit qu'j'étais trop con<br />
 >J'suis dans l'tah et dans l'cocon, on des mes-ar si nous toquons<br/>
