--- a/posts/posts/2023-07-07-cmd-107.md
+++ b/posts/posts/2023-07-07-cmd-107.md
@@ -16,10 +16,9 @@ Au programme d'ici là : du calme, un poil moins que l'épisode `106` très Dark
 
 ### Disco - Album : MLDE (2022)
 
-Aller on commence avec Marxist Love Disco Ensemble, très belle découverte du week-end dernier. Le groupe produit une Disco un peu Boogy, assez rafraichissante, et qui s'écoute comme on boit du petit. En voici un exemple ici avec "Material", et puis vous irez écouter l'album entier.
+Aller on commence avec Marxist Love Disco Ensemble, très belle découverte du week-end dernier. Le groupe produit une Disco un peu Boogy, assez rafraichissante, et qui s'écoute comme on boit du petit lait. En voici un exemple ici avec "Material", et puis vous irez écouter l'album entier.
 
-https://www.youtube.com/watch?v=RE_XX6jk2Lo
-
+https://www.youtube.com/watch?v=at5lfRXtci8
 
 ## Macroblank - bleak sorrows
 
