--- a/posts/posts/2023-07-21-cmd-108.md
+++ b/posts/posts/2023-07-21-cmd-108.md
@@ -52,7 +52,7 @@ https://www.youtube.com/watch?v=QhsNwIpfSrY
 
 ## Electrelane - Love Builds Up
 ### Synth Pop / Alternative Rock
-À la recherche d'un peu plus de peps avec "Love Builds Up" de Electrelane qui a un petit air d'une instru de Stereolab, moitié Synth Pop, moitié Indie Rock avant-gardiste. Vous en redemande et on s'empresse donc d'aller écouter l'album entier.
+À la recherche d'un peu plus de peps avec "Love Builds Up" de Electrelane qui a un petit air d'une instru de Stereolab, moitié Synth Pop, moitié Indie Rock avant-gardiste. On en redemande et on s'empresse donc d'aller écouter l'album entier.
 
 https://www.youtube.com/watch?v=m3RnzSpZu8c
 
