--- a/posts/posts/2023-07-21-cmd-108.md
+++ b/posts/posts/2023-07-21-cmd-108.md
@@ -60,13 +60,13 @@ https://www.youtube.com/watch?v=m3RnzSpZu8c
 ### Electro / Breakbeat / Pop - Album : Indigo (2016)
 Le morceau le plus grand public de ce `cmd`-ci sera peut-être "Acid Test" et son Electro un poil Breakbeat, et ses vibes Pop.
 
-On aime particulièrement l'arrivée de Drum qui viennent déchaîner la mélancolie portée par le texte de River Tiber. Joli combo.
+On aime particulièrement l'arrivée de drums qui viennent déchaîner la mélancolie portée par le texte de River Tiber. Joli combo.
 
 https://www.youtube.com/watch?v=6Dj14UqY1kY  
 
 ## Philip Jeck - Veil
 ### Ambient - Album : 7 (2003)
-Le coup de coeur cette semaine c'est cette Ambient sombre, quasi Minimal et qui s'étire sur 10 minutes bien rempli. Le son porté en reverb rempli l'espace comme dans une Chapelle abandonnée.
+Le coup de coeur cette semaine c'est cette Ambient sombre, quasi Minimal et qui s'étire sur 10 minutes bien rempli. Le son porté en reverb rempli l'espace comme dans une chapelle abandonnée.
 
 À retrouver à la rentrée dans [ISS](https://www.prun.net/emission/8MNV-iss), très certainement.
 
@@ -74,7 +74,7 @@ https://philipjeck.bandcamp.com/track/veil
 
 ## Expensive Music Band - Bowling Alone
 ### Alternative Rock - Album : Things to Say at a Barbeque (2023)
-Avec "Bowling Alone" on est une fois de plus en face d'un morceau qui nous fait penser à quelqu'un d'autre. Les 2 premières minutes et leur Rock alternatif à l'esprit très américain ont un petit air de Rodriguez, qu'on découvrait dans le [`cmd#79`](https://cmd.wuips.com/post/2022-12-23-cmd-79) souvenez-vous.
+Avec "Bowling Alone" on est une fois de plus en face d'un morceau qui nous fait penser à quelqu'un d'autre. Les 2 premières minutes et leur Rock alternatif à l'esprit très américain ont un petit air de Rodriguez, qu'on découvrait dans le [`cmd#79`](https://cmd.wuips.com/post/2022-12-23-cmd-79) souvenez-vous donc.
 
 https://www.youtube.com/watch?v=XN-fnkPjDXU 
 
