--- a/posts/posts/2023-07-21-cmd-108.md
+++ b/posts/posts/2023-07-21-cmd-108.md
@@ -8,7 +8,7 @@ image:
 
 Revoilà `cmd`! On s'est permis une petite pause la semaine dernière mais pas d'inquiétude ! La musique est toujours là. Ouf.
 
-C'était la première pause en en 107 épisodes tout compte fait et ce qui fait, si je compte bien, moins d'une pause tous les deux ans pour l'instant. Pas de stress donc si à l'été 2025 vous trouvez qu'un épisode ou deux manquent, hein. Sur ce que cela dit du personnage, de l'importance des rituels et du probablement manque de lâcher prise, par contre, on laissera plus avisé que nous en disserter.
+C'était la première pause en en 107 épisodes tout compte fait et ce qui fait, si je compte bien, moins d'une pause tous les deux ans pour l'instant. Pas de stress donc si à l'été 2025 vous trouvez qu'un épisode ou deux manquent, hein. Sur ce que cela dit du personnage, de l'importance des rituels et du probable manque de lâcher prise, par contre, on laissera plus avisé que nous en disserter.
 
 Repartons donc sur nos bases. Programme du jour : Synth Pop (mais version un peu perchée), Ambient beaucoup, Jazz un peu, Techno un peu, Electro un peu, Rock dans sa version alternative, ambiance Far West.
 
@@ -36,7 +36,7 @@ https://hallowground.bandcamp.com/track/betty-s-nap
 
 ## Leftfield - A Final Hit
 ### Techno / House / Downtempo - Compilation :  Trainspotting (Music From The Motion Picture) (1996)
-Juste avant ces petites vacances on me reprochais mon absence de culture cinématographique. Déso déso, mais je crois que c'est foutu pour de bon. Le point crucial en ce qui nous concerne némanmoins était la méconnaissance des BOs célèbres et qui mériteraient leur place ici, comme celle de Trainspotting que j'ai enfin écouté sur les bons conseils de Damien, mon collègue aux très bonnes références musicales.
+Juste avant ces petites vacances on me reprochait mon absence de culture cinématographique. Déso déso, mais je crois que c'est foutu pour de bon. Le point crucial en ce qui nous concerne némanmoins était la méconnaissance des BOs célèbres et qui mériteraient leur place ici, comme celle de Trainspotting que j'ai enfin écouté sur les bons conseils de Damien, mon collègue aux très bonnes références musicales.
 
 C'est très certainement une construction collaborative ce `cmd`, voyez-vous. Merci Damien !
 
@@ -44,7 +44,7 @@ https://www.youtube.com/watch?v=ZiM-MBpe8gY
 
 ## ANNA & Endel - Play of Consciousness
 ### Ambient - Album : The Spring of Dreams (2022)
-On repasse part un peu d'Ambient. C'est encore le temps des vacances pour quelques jours et cette semaine ressemble tout particulièrement à un unique moment qu'on aurait étiré si longuement que cela donnerait 7 jours complets.
+On repasse par un peu d'Ambient. C'est encore le temps des vacances pour quelques jours et cette semaine ressemble tout particulièrement à un unique moment qu'on aurait étiré si longuement que cela donnerait 7 jours complets.
 
 Plus vraiment de repères et l'impression d'être un peu perché, ça colle bien avec "Play of Consciousness", un Ambient version "méditation psychédélique".
 
@@ -66,7 +66,7 @@ https://www.youtube.com/watch?v=6Dj14UqY1kY
 
 ## Philip Jeck - Veil
 ### Ambient - Album : 7 (2003)
-Le coup de coeur cette semaine c'est cette Ambient sombre, quasi Minimal et qui s'étire sur 10 minutes bien rempli. Le son porté en reverb rempli l'espace comme dans une chapelle abandonnée.
+Le coup de coeur cette semaine c'est cette Ambient sombre, quasi Minimal et qui s'étire sur 10 minutes bien remplies. Le son porté en reverb rempli l'espace comme dans une chapelle abandonnée.
 
 À retrouver à la rentrée dans [ISS](https://www.prun.net/emission/8MNV-iss), très certainement.
 
@@ -80,7 +80,7 @@ https://www.youtube.com/watch?v=XN-fnkPjDXU
 
 ## Crosby, Stills & Nash - Helplessly Hoping
 ### Folk - Album : Crosby, Stills & Nash (1969)
-On restera aux US pour un finish Folk. Un beau morceau de fin finalement une fois de plus. Rendez-vous la semaine prochaine les ami•e
+On restera aux US pour un finish Folk. Un beau morceau de fin finalement une fois de plus. Rendez-vous la semaine prochaine les ami·e·s
 
 > Love isn't lying<br/>
 > It's loose in a lady who lingers<br/>
