--- a/posts/posts/2023-07-28-cmd-109.md
+++ b/posts/posts/2023-07-28-cmd-109.md
@@ -58,13 +58,13 @@ https://davimusic.bandcamp.com/track/mountainous-through-a-haze-imperfect
 ## Feu! Chatterton - J'ai tout mon temps
 ### Chanson / Pop Rock - Compilation: La Grande Magie (2023)
 
-Revoilà un des mes groupes chouchou qui a travaillé ces derniers moi à la BO du film "La Grande Magie". On y trouve cette humble pépite, "J'ai tout mon temps", sage parole qui est parfaite dans l'équilibre entre le texte chanté par Arthur Teboul et l'arrangement porté par le reste du groupe qui devient au fil du temps une référence dans la chanson française.
+Revoilà un des mes groupes chouchou qui a travaillé ces derniers mois à la BO du film "La Grande Magie". On y trouve cette humble pépite, "J'ai tout mon temps", sage parole qui est parfaite dans l'équilibre entre le texte chanté par Arthur Teboul et l'arrangement porté par le reste du groupe qui devient au fil du temps une référence dans la chanson française.
 
 > Moi qui voulais vivre vite <br/>
 > Pour que ma vie dure longtemps. <br/>
 > ... <br/>
 > J'ai tout mon temps, <br/>
-> Tout le temps de t'aimer. <b/>r
+> Tout le temps de t'aimer. <b/>
 
 https://www.youtube.com/watch?v=avSQsiW2s7E
 
@@ -80,7 +80,7 @@ https://www.youtube.com/watch?v=KpwSV1QBd8M
 ## ANOHNI and the Johnsons - Why Am I Alive Now?
 ### Pop / Art Rock - Album : My Back Was A Bridge For You To Cross (2023)
 
-On a affaire avec le récent My Back Was A Bridge For You To Cross a un solide album, du ceux qui, que l'on apprécie ou pas la musique au fond, laisse tout de même le sentiment de quelque chose d'entier qui s'est déroulée à l'écoute et d'un récit puissant.
+On a affaire avec le récent My Back Was A Bridge For You To Cross a un solide album, du ceux qui, que l'on apprécie ou pas la musique au fond, laisse tout de même le sentiment de quelque chose d'entier qui s'est déroulé à l'écoute et d'un récit puissant.
 
 J'en ai tiré "Why Am I Alive Now?" qui impressionne dans l'arrangement et qui vous donnera peut-être la curiosité d'aller écouter plus loin, ayant flashé sur cette voix incroyable.
 
@@ -89,7 +89,7 @@ https://www.youtube.com/watch?v=5NLyFXWEN0c
 ## Joy Orbison - in drink
 ### House / Downtempo / Glitch - Album : Still Slipping (2021)
 
-On retrouve Joy Orbison qui avait bien failli se retrouver sur `cmd` il y a quelques temps mais qui avait certainement du faire fasse à une intense compétition. Probablement une de ces semaines à devoir choisir 10 morceaux parmi 25 très bien.
+On retrouve Joy Orbison qui avait bien failli se retrouver sur `cmd` il y a quelques temps mais qui avait certainement du faire face à une intense compétition. Probablement une de ces semaines à devoir choisir 10 morceaux parmi 25 très biens.
 
 Cette fois-ci est la bonne donc et il nous faudra une fois de plus remercier FIP pour la découverte de cette pépite House mais option pépère, et légèrement glitchée.
 
