--- a/posts/posts/2023-09-01-cmd-113.md
+++ b/posts/posts/2023-09-01-cmd-113.md
@@ -13,7 +13,7 @@ Aller aller, le programme : pas vraiment d'Ambient étrangement, de la Pop, de l
 ## The Stoned Immaculate - Mr Lucky
 ### Indie Rock - Album : Whatever. (2023)
 
-Aller on commence fort avec du bon vieux Indie Rock anglais. La basse bien crado pour la texture, et le combo rythmique plus voix énervé nous donne envie de sortir d'un coup de chez soi d'un pas énervé pour un je ne sais quoi.
+Aller on commence fort avec du bon vieux Indie Rock anglais. La basse bien crado pour la texture, et le combo rythmique plus voix énervée nous donne envie de sortir d'un coup de chez soi d'un pas énervé pour un je ne sais quoi.
 
 > Who! I miss the look of you
 
@@ -52,7 +52,7 @@ https://nightbeats.bandcamp.com/track/hot-ghee
 
 Croisé au hasard d'un interview des Psychotic Monks, les autres barrés qu'on aime énormément depuis leur passage à Stéréolux en fin d'année dernière, voilà Mamman Sani et son album Taaritt.
 
-J'ai surtout flashé sur le premier track "Ya Bismillah", à la fin simple, un peu champètre et futuristique.
+J'ai surtout flashé sur le premier track "Ya Bismillah", à la fin simple, un peu champêtre et futuristique.
 
 https://mammansani.bandcamp.com/track/ya-bismillah
 
@@ -78,7 +78,7 @@ https://inaeternamvale.bandcamp.com/track/conquer-with-peace
 ## Agusa - Under bar himmel 
 ### Psychedelic Rock - Album : Prima Materia (2023)
 
-Petit détour en suède avant de rentrer chez nous avec ce drôle de concept : du Rock psychédélique, mais à la flutte. Ça marche plutôt bien comme vous pourrez l'écouter sur l'album Prima Materia entier.
+Petit détour en Suède avant de rentrer chez nous avec ce drôle de concept : du Rock psychédélique, mais à la flutte. Ça marche plutôt bien comme vous pourrez l'écouter sur l'album Prima Materia entier.
 
 En attendant voilà "Under bar himmel" et ses envolées lyriques qui sont presque too much.
 
