--- a/posts/posts/2023-09-15-cmd-115.md
+++ b/posts/posts/2023-09-15-cmd-115.md
@@ -14,7 +14,7 @@ Au programe, du calme : Ambient,  Pop Rock, Classic, Jazz, Soul et un peu de R&B
 ## KMRU - matching teal surfaces
 ### Ambient / Electro -  EP: drawing water (2020)
 
-On démarre ce `cmd` l'esprit joyeux et innocent. Pour nous aider, ce doux morceau Ambient, très Electro dans ces sons rond mais percutants. On est comme au pays des songes, dans un rêve et de retour en enfance.
+On démarre ce `cmd` l'esprit joyeux et innocent. Pour nous aider, ce doux morceau Ambient, très Electro dans ces sons ronds mais percutants. On est comme au pays des songes, dans un rêve et de retour en enfance.
 
 https://kmru.bandcamp.com/track/matching-teal-surfaces
 
@@ -22,7 +22,7 @@ https://kmru.bandcamp.com/track/matching-teal-surfaces
 ## Randy Newman - I Love L.A.
 ### Pop Rock - Album : Trouble in Paradise (1983)
 
-On remerciera FIP ensuite d'avoir sélectionné ce "I Love L.A." presque cliché mais qui met la pêche. Certain jours c'est tout ce qui compte, avec le soleil.
+On remerciera FIP ensuite d'avoir sélectionné ce "I Love L.A." presque cliché mais qui met la pêche. Certains jours c'est tout ce qui compte, avec le soleil.
 
 > Everybody's very happy <br/>
 > 'Cause the sun is shining all the time <br/>
@@ -34,7 +34,7 @@ https://www.youtube.com/watch?v=KcADqxnQA_4
 ## György Ligeti - Musica ricercata: No. 7, Cantabile, molto legato 
 ### Classical - Album : Mechanical Music (1997)
 
-Ok fini de rigoler et passage aux choses sérieuses avec ce morceau Classique et Expérimental. L'album ne s'appelle pas pour rien Mechanical Music" de György Ligeti avec Pierre Charial, Françoise Terrioux et Jürgen Hocker si mes renseignement sont bons.
+Ok fini de rigoler et passage aux choses sérieuses avec ce morceau Classique et Expérimental. L'album ne s'appelle pas pour rien "Mechanical Music" de György Ligeti avec Pierre Charial, Françoise Terrioux et Jürgen Hocker si mes renseignements sont bons.
 
 On s'émerveillera devant le contraste offert par les deux mains du pianiste comme deux personnes distinctes .
 
@@ -44,7 +44,7 @@ https://www.youtube.com/watch?v=bNpbi9maX1E
 ## Chassol - Wersailles (Planeur) 
 ### Classical / Jazz / Experimental - Ultrascores (2013)
 
-En parlant de piano, on est allé écouté Chassol qui passait faire un tour chez FIP, forcément, pour bien démarrer cette rentré. La sélection de l'artiste était aux petits oignons, en en retrouve plusieurs morceaux ici, et il y avait ce "Wersailles (Planeur)" de Chassol lui même, comme du Jazz dilué.
+En parlant de piano, on est allé écouter Chassol qui passait faire un tour chez FIP, forcément, pour bien démarrer cette rentrée. La sélection de l'artiste était aux petits oignons, on en retrouve plusieurs morceaux ici, et il y avait ce "Wersailles (Planeur)" de Chassol lui même, comme du Jazz dilué.
 
 https://www.youtube.com/watch?v=_DvKPYjzJYA
 
@@ -91,7 +91,7 @@ https://app.tana.inc/?wsid=9QFI4fCVGEda
 ## Adi Oasis - Dumpalltheguns
 ### R&B - Album : Lotus glow (2023)
 
-On tentera ensuite de décoller un peu avec du R&B. Question d'énergie. Pour ce faire on fait appel à Adi Oasis, chanteuse franco-caribéenne qui a sorti son troisième album en début d'anné.
+On tentera ensuite de décoller un peu avec du R&B. Question d'énergie. Pour ce faire on fait appel à Adi Oasis, chanteuse franco-caribéenne qui a sorti son troisième album en début d'année.
 
 C'est juste ce qu'il faut de groove pour coller au `cmd` du jour sans trop sortir des clous.
 
