--- a/posts/posts/2023-09-21-cmd-116.md
+++ b/posts/posts/2023-09-21-cmd-116.md
@@ -25,7 +25,7 @@ https://www.youtube.com/watch?v=BSKahV3OHCo
 
 On ralentit un peu car il s'agirait de ne pas cramer tout le stock d'énergie dès le 2ème morceau de la sélection du jour.
 
-Avec ce "Hidden Angel", version "Hackney Road Studio", on a affaire à un morceau apaisant : du piano, des nappes ambiante et des paroles nous portant comme une homélie.
+Avec ce "Hidden Angel", version "Hackney Road Studio", on a affaire à un morceau apaisant : du piano, des nappes ambiantes et des paroles nous portent comme une homélie.
 
 https://www.youtube.com/watch?v=4KAEQ2VNfn0
 
@@ -34,14 +34,14 @@ https://www.youtube.com/watch?v=4KAEQ2VNfn0
 
 La transition est toute trouvée avec cet autre morceau Ambient, plus électronique et minimal, mais toujours agrémenté de paroles au loin comme dans un songe délicat.
 
-On est comme extrait momentanément dans le marasme du train de retour, et cela n'a pas de prix
+On est comme extraits momentanément du marasme du train de retour, et cela n'a pas de prix.
 
 https://boyharsher.bandcamp.com/track/subdue-yourself
 
 ## Slowdive - shanty
 ### Alternative Rock / Pop / Shoegaze - Album : everything is alive (2023
 
-Le coup de coeur de la semaine c'est un album complet : everything is alive du groupe anglais Slowdive.  Reformé depuis 2014, le groupe a tout juste sorti cette nouvelle pépite qu'on vous conseille d'écouter et de réécouter.
+Le coup de coeur de la semaine c'est un album entier : everything is alive du groupe anglais Slowdive. Reformé depuis 2014, le groupe a tout juste sorti cette nouvelle pépite qu'on vous conseille d'écouter et de réécouter.
 
 Exemple de ce que vous pourrez y trouver ici : une sorte de Shoegaze Rock, avec de belles textures, et quelques paroles par-ci, par-là. On aime beaucoup
 
@@ -50,7 +50,7 @@ https://www.youtube.com/watch?v=JMYyqPlgevo
 ## Metamatics - Machine Wool
 ### IDM / Experimental - Album : From Death To Passwords Where You're A Paper Aeroplane (2023)
 
-L'autre coup de coeur de la semaine - un morceau cette fois - c'est cette IDM qui démarre très _minimalo-expérimental_ et qui se voit enrichir de sons presque Jazz. L'équilibre est parfait entre l'IDM est les nappes. On n'en demande pas plus d'un très bon morceau.
+L'autre coup de coeur de la semaine - un morceau cette fois - c'est cette IDM qui démarre très _minimalo-expérimental_ et qui se voit enrichir de sons presque Jazz. L'équilibre est parfait entre le son hâché est les nappes. On n'en demande pas plus d'un très bon morceau.
 
 https://metamatics.bandcamp.com/track/machine-wool
 
@@ -73,7 +73,7 @@ https://www.youtube.com/watch?v=DV9KsV45vJ0
 ## Jeff Rosenstock - WILL U STILL U
 ### Punk - Album : HELLMODE (2023)
 
-Je n'oserait pas déclarer "WILL U STILL U" le troisième coup de coeur de ce `cmd` - ça fait surement trop - mais le coeur y est. C'est Punk, ça parle d'amour et de regrets, et on y trouve ce côté Rock qui rappèle ce qu'on se passait entre les oreilles ado.
+Je n'oserait pas déclarer "WILL U STILL U" le troisième coup de coeur de ce `cmd` - ça fait surement trop - mais l'intention est là. C'est Punk, ça parle d'amour et de regrets, et on y trouve ce Rock qui rappelle ce qu'on se passait entre les oreilles adolescent•es.
 
 Bisous bisous bisous
 
