--- a/posts/posts/2023-09-29-cmd-117.md
+++ b/posts/posts/2023-09-29-cmd-117.md
@@ -2,7 +2,7 @@
 title: 'cmd #117'
 image:
     src: '/images/cmd-117.png'
-    alt: "des petites jouets en forme de chiens"
+    alt: "un poisson dans un aquarium"
     caption: "poisson"
 ---
 
